tests/baselines/reference/objectTypesIdentityWithOptionality(strict=true).errors.txt
objectTypesIdentityWithOptionality.ts(4,5): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
objectTypesIdentityWithOptionality.ts(8,5): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
objectTypesIdentityWithOptionality.ts(12,5): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
objectTypesIdentityWithOptionality.ts(22,10): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithOptionality.ts(23,10): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithOptionality.ts(26,10): error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithOptionality.ts(27,10): error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithOptionality.ts(30,10): error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithOptionality.ts(31,10): error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithOptionality.ts(34,10): error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithOptionality.ts(35,10): error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithOptionality.ts(38,10): error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithOptionality.ts(39,10): error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithOptionality.ts(42,10): error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithOptionality.ts(43,10): error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithOptionality.ts(46,10): error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithOptionality.ts(47,10): error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithOptionality.ts(50,10): error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithOptionality.ts(51,10): error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithOptionality.ts(54,10): error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithOptionality.ts(55,10): error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.


==== objectTypesIdentityWithOptionality.ts (21 errors) ====
    // object types are identical structurally
    
    class A {
        foo: string;
        ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    }
    
    class B {
        foo: string;
        ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    }
    
    class C<T> {
        foo: T;
        ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    }
    
    interface I {
        foo?: string;
    }
    
    var a: { foo?: string; }
    var b = { foo: '' };
    
    function foo2(x: I);
             ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo2(x: I); // error
             ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo2(x: any) { }
    
    function foo3(x: typeof a);
             ~~~~
!!! error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo3(x: typeof a); // error
             ~~~~
!!! error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo3(x: any) { }
    
    function foo6(x: A);
             ~~~~
!!! error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo6(x: I); // ok
             ~~~~
!!! error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo6(x: any) { }
    
    function foo7(x: A);
             ~~~~
!!! error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo7(x: typeof a); // ok
             ~~~~
!!! error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo7(x: any) { }
    
    function foo8(x: B);
             ~~~~
!!! error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo8(x: I); // ok
             ~~~~
!!! error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo8(x: any) { }
    
    function foo10(x: B);
             ~~~~~
!!! error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo10(x: typeof a); // ok
             ~~~~~
!!! error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo10(x: any) { }
    
    function foo12(x: I);
             ~~~~~
!!! error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12(x: C<string>); // ok
             ~~~~~
!!! error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12(x: any) { }
    
    function foo13(x: I);
             ~~~~~
!!! error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo13(x: typeof a); // error
             ~~~~~
!!! error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo13(x: any) { }
    
    function foo14(x: I);
             ~~~~~
!!! error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo14(x: typeof b); // ok
             ~~~~~
!!! error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo14(x: any) { }